docs: add show opening documentation
